--- a/spring-cloud-app-user-info/pom.xml
+++ b/spring-cloud-app-user-info/pom.xml
@@ -21,6 +21,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-feign</artifactId>
 			<version>1.7.1</version>
